# demos

./: .devenv.flake.nix  devenv.nix
marketing-demo/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
marketing-demo/datasets/: sfo_landings_2015_2025.csv
marketing-demo/src/: cors.ts  middleware.ts
marketing-demo/src/app/: layout.tsx
marketing-demo/src/app/api/transform-data/: route.ts
marketing-demo/src/app/api/transform-data/execute/: route.ts
marketing-demo/src/app/api/transform-data/generate-code/: route.ts
marketing-demo/src/app/api/visualize-data/execute/: route.ts
marketing-demo/src/app/api/visualize-data/generate-code/: route.ts
marketing-demo/src/app/api/voyager/chat/: route.ts  types.ts
marketing-demo/src/app/transform/: page.tsx
marketing-demo/src/app/voyager/: context.tsx  layout.tsx  page.tsx  types.ts
marketing-demo/src/app/voyager/components/: ChatInput.tsx  CodeBlock.tsx  Header.tsx  Loader.css  MessageItem.tsx  MessageList.tsx
marketing-demo/src/examples/: customers.json
mcp-python/: README.md  pyproject.toml
mcp-python/src/riza_mcp_python/: server.py
riza-mcp-server/: .gitignore  README.md  package-lock.json  package.json
riza-mcp-server/src/: index.ts  toolUtils.ts
self-learning-agent/: .gitignore  README.md  SelfLearningAgent.ts  clients.ts  credentials.ts  index.ts  package-lock.json  package.json  pnpm-lock.yaml  toolUtils.ts
voyager-server/: .gitignore  README.md  package-lock.json  package.json  system-prompt.txt
voyager-server/src/: credentials.ts  index.ts  toolUtils.ts  types.ts
(+1 files in other folders)
